apps/oracle-cluster/osticket/osticket/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: osticket-service
  namespace: osticket
spec:
  selector:
    app: osticket
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
